--- a/studyweb/js/基础2.md
+++ b/studyweb/js/基础2.md
@@ -10,7 +10,13 @@ a.prototype.c=[];
 
     let x=new  a();
   
-    方法的内置对象能调用
+    方法的内置对象能调用c数字
+    x独享能调用数组
+     
+    a函数方法名对象调用的只能调用在上面申明变量
+
+
+
 
 function a(){
     // console.log("ss")
@@ -22,5 +28,10 @@ console.log(x);
 console.log(x.__proto__.c);
 
 console.log(x.__proto__.constructor._xxx); //[]
+
+
+
+
+this.__proto__   在内部是等于 this对象的
 
 ```
