--- a/studyweb/js/javascript模块化编程/1模块的写法.md
+++ b/studyweb/js/javascript模块化编程/1模块的写法.md
@@ -74,6 +74,155 @@ CommonJs(主要用于服务器模块的加载)
 
 AMD
 
+    浏览器  不能采用同步加载模块，只能使用异步加载模块
+        因为浏览器加载模块的速度取决于网络的速度，同步加载由于网络速度慢会使浏览器会卡很久造成假死的现象，所以只能采用异步加载
+
+
+    require([module], callback); AMD 的模块加载的格式
+
+
+
+
+
+
+
+
 
 ```
 
+
+
+### require.js的用法
+
+```
+require.js  采用了AM规范
+
+require.js 优点
+    （1）实现js文件的异步加载，避免网页失去响应；
+
+　　（2）管理模块之间的依赖性，便于代码的编写和维护。
+
+
+
+
+https://requirejs.org/docs/download.html
+
+使用require.js的第一步，是先去官方网站下载最新版本。
+
+下载后，假定把它放在js子目录下面，就可以加载了。
+
+<script src="js/require.js"></script>
+
+
+
+
+<script src="js/require.js" defer async="true" ></script>  使脚本异步加载
+
+async 在IE中不支持  支持defer 所以建议两个都写上,这样就可以对不同浏览器进行兼容
+
+
+
+
+
+加载require.js以后，下一步就要加载我们自己的代码了。假定我们自己的代码文件是main.js，也放在js目录下面。那么，只需要写成下面这样就行了：
+<script src="js/require.js" data-main="js/main"></script>
+data-main属性的作用是，指定网页程序的主模块。在上例中，就是js目录下面的main.js，这个文件会第一个被require.js加载。由于require.js默认的文件后缀名是js，所以可以把main.js简写成main。
+
+   设置主模块之后，该主模块就会被第一个加载
+
+
+
+
+
+主模块依赖其他的模块
+
+　　require(['jquery', 'underscore', 'backbone'], function ($, _, Backbone){
+
+　　　　// some code here
+
+　　});
+
+
+     在主模块里面会先加载     'jquery', 'underscore', 'backbone'  这三个模块然后在执行回调函数
+
+
+
+
+
+
+
+
+
+
+四、模块的加载
+    
+    'jquery', 'underscore', 'backbone'    require.js会假定他们在同一目录  'jquery.js', 'underscore.js', 'backbone.js'
+
+     当然我们也可以对他进行自定义的目录
+        使用require.config()方法，我们可以对模块的加载行为进行自定义。require.config()就写在主模块（main.js）的头部。参数就是一个对象，这个对象的paths属性指定各个模块的加载路径。
+
+        注意 ：这个require.js的config()函数就写在
+
+　require.config({
+
+　　　　paths: {
+
+　　　　　　"jquery": "jquery.min",
+　　　　　　"underscore": "underscore.min",
+　　　　　　"backbone": "backbone.min"
+
+　　　　}
+
+　　});
+
+
+
+或者
+
+　require.config({
+
+　　　　paths: {
+
+　　　　　　"jquery": "lib/jquery.min",
+　　　　　　"underscore": "lib/underscore.min",
+　　　　　　"backbone": "lib/backbone.min"
+
+　　　　}
+
+　　});
+
+
+或者
+　require.config({
+
+　　　　baseUrl: "js/lib",
+
+　　　　paths: {
+
+　　　　　　"jquery": "jquery.min",
+　　　　　　"underscore": "underscore.min",
+　　　　　　"backbone": "backbone.min"
+
+　　　　}
+
+　　});
+
+或者
+
+　　require.config({
+
+　　　　paths: {
+
+　　　　　　"jquery": "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min"
+
+　　　　}
+
+　　});
+
+
+
+
+
+
+
+```
