点击添加资料链接

--- a/计算机图像学/数学/向量和矩阵.md
+++ b/计算机图像学/数学/向量和矩阵.md
@@ -1,3 +1,5 @@
+[点积推导资料](http://clas.sa.ucsb.edu/docs/default-source/alex-resources/dotproductderivation.pdf?sfvrsn=673b2bfb_2)
+<br>
 两个向量的点乘
 ```
 v(a,b) v1(c,d)两个向量
