向量差积和点积学习

--- a/计算机图像学/数学/向量和矩阵.md
+++ b/计算机图像学/数学/向量和矩阵.md
@@ -1,4 +1,6 @@
-[点积推导资料](http://clas.sa.ucsb.edu/docs/default-source/alex-resources/dotproductderivation.pdf?sfvrsn=673b2bfb_2)
+[点积推导资料](
+    http://www.sunshine2k.de/articles/Derivation_DotProduct_R2.pdf
+)
 <br>
 两个向量的点乘
 ```
@@ -12,4 +14,49 @@ v*v1=(a*c)+(b*d);
 cos 两向量的夹角=v*v1/(v的长度)*(v1的长度)
 
 这样就能计算出连个向量之间的夹角
+
+
+
+
+向量点积的推导公式的基础都离不开余弦定理
+
+三角形已知两边和两边的夹角就能求解第三边
+
+a^2=b^2+c^2-abc*cosA 的公式
 ```
+
+
+
+### 向量差乘
+
+[向量差乘](https://en.wikipedia.org/wiki/Cross_product)
+
+
+```
+
+c向量的方向严格按照右手定律
+
+
+axb 可以得到垂直于ab向量的第三条向量
+
+a(ax,ay,az) b(bx,by,bz)
+c=axb=(ay*bz-az*by,ax*bz-az*bx,ax*by-ay*bx)
+|c|=|a|*|b|*sina    a为a向量和向量的夹角
+
+
+
+运算率
+
+axb=-bxa
+支持分配率和结合律
+
+|axb|*/2 的几何意义就是计算a向量和b限量围起来三角形的面积
+
+
+
+aXb =0向量  就说明 a向量和b向量平行
+
+aXB  差积的计算记过就是垂直于a和b的c向量同时满足  |c|=|a|*|b|*sina 
+```
+
+
