重学汇编整数1

--- a/assembler/整数.md
+++ b/assembler/整数.md
@@ -61,7 +61,95 @@ c语言中 (指针) 类型占的内存位宽
     a=a+1;就等于取反的值
 
 
-    在硬件层面是没有代符号
+    在硬件层面是没有代符号和不带符号的他们都被统一表示成二进制
+```
+
+
+
+
+无符号数和有符号数的相互转换 
+
+```
+当有符号大于0
+   转换为有符号直接转过去不做任何改变
+
+当有符号小于0
+    -1 
+    转化为无符号数就是最大(2^(w)-1)
+    -2   转化  max -2
+    依次次类推
+
+当无符号 为0-2^(w-1) 次方范围内的时候转化为有符号不变
+
+
+当无符号2^(w-1)-2^(w)-1的范围的时候转换到有符号为
+      2^(w)-1  对应的有符号-1
+      
+      2^(w-1)=对饮有符号 -2^(w-1)
+
+
+      -2^(w-1)+0xxxxxxxxx(表示宽度1byte 就是8位)and num;
+
+```
+
+
+
+
+
+c语言中
+```
+常数 
+    默认是带符号数
+
+    如有使用无符号name后面加上U   比如0U
+
+如果无符号和带符号混合使用哪个带符号数会被默认转换为无符号数   
+
+
+
+
+在c语言中除了
+    模运算
+    位运算
+    最好不要使用无符号数
+    不能仅仅因为数是非负而使用无符号数
+
+
+
+c语言中的陷阱
+    #define DELTA sizeof(int)
+
+    int i;
+
+    for(i=CNT;i-DELTA>=0;i-=DELTA){
+
+    }
+
+    sizeof(int) 返回的是 DELTA  unsigned无符号类型
+     i也会变为无符号类型
+
+     i-DELTA  无符号类型永远都是大于等于0会造成死循环
+
+
+```
+
+
+
+无符号数相加可能数据溢出
+```
+写程序的时候尽量看一下数据会不会找成超过位宽，超过位宽会找成数据的溢出
+
+UAdd(u,v)={
+    u+v    u+v<2^w
+    u+v-2^w   u+v>=2^w  这样就会造成溢出  u+v=2^w  得到的结果就为0   
+}
+
+例本来
+
+11111111  1byte位宽  在加1
+得到
+100000000  由于位宽为8位所以只能保留8位(重最低位开始)
+所以最后内存里面的数字为00000000 结果为0 
 ```
 
 
