--- a/assembler/整数.md
+++ b/assembler/整数.md
@@ -153,3 +153,65 @@ UAdd(u,v)={
 ```
 
 
+
+
+在程序中除法
+```
+完成除法需要周期数比较长？？？？
+
+
+建议使用位移
+
+
+
+unsigned  xxx( unsigned x){
+    return x/8;
+}
+
+
+//编译器优化
+
+x>>3
+
+
+
+汇编代码
+
+
+shrl  $3 ,%eax
+
+shrl shelf right  $3 向右移动3为
+
+shrl  逻辑右移
+sharl 算数右移
+向右移动分为
+    算数位移
+        补0
+    逻辑位移
+        需要在符号位补符号位
+向左移动
+    只有算数位移    
+
+
+
+
+
+
+带符号数除以2的整数次幂
+
+    若同一个类型他们的值的范围都是(2^w-1-1)那个他们都是用的算数右移
+
+    若有符号类型,他为负数那么他右移的时候应该使用逻辑位移
+
+
+    
+
+
+
+
+
+
+
+
+```
+
