向量矩阵相关知识学习

--- a/计算机图像学/数学/向量和矩阵.md
+++ b/计算机图像学/数学/向量和矩阵.md
@@ -60,3 +60,78 @@ aXB  差积的计算记过就是垂直于a和b的c向量同时满足  |c|=|a|*|b
 ```
 
 
+
+
+矩阵与向量相乘
+
+```
+向量其实就是 n行1列的矩阵  n代表的是向量的维度
+
+
+单位矩阵
+    单位矩阵就是除了对角都为0的矩阵
+    [
+        1,0,0
+        0,1,0
+        0,0,1
+    ]
+    上面的这个矩阵就是单位矩阵
+    
+
+缩放
+     概念
+        若 x,y,z缩放的倍数都是一样的那么叫做均匀缩放，相反叫做不均匀缩放
+
+
+    例：我们是用矩阵来提供缩放功能 
+    x，y,z的缩放分别是  s1,s2,s3
+           [
+               s1,0,0,0,
+               0,s2,0,0,
+               0,0,s3,0,
+               0, 0, 0, 1
+           ] *  [
+               X,
+               Y,
+               Z,
+                1
+           ](任意向量)
+
+位移
+      其实就是矩阵和向量的加法
+
+              [
+               1,0,0,t1,
+               0,1,0,t2,
+               0,0,1,t3,
+               0, 0, 0, 1
+           ] *  [
+               X,
+               Y,
+               Z,
+                1
+           ](任意向量)
+
+           =[
+              x+t1,
+              y+t2,
+              z+t3,
+              1
+           ]
+
+
+            向量 x,y,z,1 值 1叫做齐次向量
+            这个齐次向量在3D移动起到关键的作用
+
+
+
+
+旋转       
+    角度和弧度之间的转换公式
+    弧度转角度：角度 = 弧度 * (180.0f / PI)
+    角度转弧度：弧度 = 角度 * (PI / 180.0f)       
+
+
+    
+               
+```
