--- a/english/1.md
+++ b/english/1.md
@@ -18,3 +18,15 @@
 simplicity  简易，简陋  /sɪmˈplɪsəti/
 similary  adv. 类似地，差不多地；同样地，也   /ˈsɪmələli/
 ```
+
+
+
+after
+```
+字面意思 prep   在……之后   adj. 后来的，以后的；后部的
+aaaa   afer ccccc 翻译顺序    ccccc之后 aaaa
+
+adding and removing items after the {@code Vector} has been created.
+  翻译： Verctor 对象创建了之后添加删除原数
+
+```
