--- a/english/1.md
+++ b/english/1.md
@@ -27,6 +27,6 @@ after
 aaaa   afer ccccc 翻译顺序    ccccc之后 aaaa
 
 adding and removing items after the {@code Vector} has been created.
-  翻译： Verctor 对象创建了之后添加删除原数
+  翻译： Verctor 对象创建了之后添加删除元素
 
 ```
