--- a/english/英语语法1.md
+++ b/english/英语语法1.md
@@ -1,1 +1,17 @@
-不及物动词
+# 英语语法1
+1.不及物动词(vi)
+```
+不需要"受者"的动词叫做不及物动词
+    例   I swim  .
+         He sleep .
+```
+
+2.及物动词(vt)
+```
+   需要"受者"的动词叫做及物动词
+
+    例  I  like  he  (like) 
+        He wants some money (want)
+    必须要受着若不要受者句子就不完整
+```
+
