学习英语语法

--- a/english/英语语法1.md
+++ b/english/英语语法1.md
@@ -4,6 +4,22 @@
 不需要"受者"的动词叫做不及物动词
     例   I swim  .
          He sleep .
+
+    1.vi 不能 直接+宾语
+     
+    2.  .主+谓+状语
+        I wait you  错误表示
+        wait  及物动词直接+宾语
+        介词可以解决这个问题。  (介词+不及物动词=及物动词)
+        I wait  for you ; 正确的表示  
+
+        介词(to of on for)等
+
+  
+
+
+
+
 ```
 
 2.及物动词(vt)
@@ -15,3 +31,48 @@
     必须要受着若不要受者句子就不完整
 ```
 
+
+
+
+3.介词
+
+```
+实词:可以担当句子成分的词性。
+    n  主语 
+    pron(代词)  宾语
+    数词(n词性)
+    v           谓语
+
+    adj       定语   
+    冠词
+    数词(adj词性)
+
+
+虚词：     介词
+          连词
+
+
+
+
+
+
+
+
+介词单独数不能作为句子的成分的
+介词总是以介词词组的方式出现
+介词词组的词性要看在句子中的成分
+    例：
+    1. 介词词组 是形容词词性， 用来修饰名词，做句子的定语
+        The lady 【in the car】 is from France
+
+    2.
+        They are playing games 【in the living room】.
+```  
+
+
+副词
+```
+    形容词：用来修饰名词和代词。
+    副词：修饰除名词和代词
+    
+```
