--- a/english/80386英语梳理.md
+++ b/english/80386英语梳理.md
@@ -21,14 +21,41 @@ introduction
             1个主语,
             1个谓语,
             有其他的动词-变成->非谓语动词{
-                to+v
-                v+ing
-                v+ed
+                to+v 表目的 ,将来,发生在谓语之后
+                v+ing  正在进行 ，习惯，和谓语同时发生
+                v+ed   被动，发生在谓语之前
             }
         } 
 
-        
 
+        例1. Mr.Victor came to our classroom to have a talk last week. 
+        V先生上周来到我们教师和我们谈话
+        
+        主语:  MrVictor
+
+        谓语 came / talk 两个动词 came当选谓语因为离主语更近
+            所以 talk 要变成非谓语的动词
+
+            have a talk  
+            表目的的化 to have chat
+
+
+        
+        例2.Seen from the mountain, the city is much more beautiful. 　
+        从山上来看城市非常的漂亮
+
+        主语:city
+
+        谓语  seen  和  is两个动词 
+            seen  不能作为谓语
+            Seen from the mountain  都不能作为一个句子  最简单的句子 主+谓
+            他没主语
+            所以要从 the city is much more beautiful.  选择一个谓语  这个谓语是 is  be动词
+
+            see  vt 看见 理解
+                vi  看，看见
+
+            see 和主语是被动关系所以应该写成 seen (非谓语动词)     
 
 
 
