--- a/english/80386英语梳理.md
+++ b/english/80386英语梳理.md
@@ -66,6 +66,35 @@ introduction
 
 advance
 ```
-n  
+ n 发展;前进;增长;预付款
+ vt 提出;预付
+ vi 前进;进展;上涨
+ adj 预先的;先行的
+
+
+例句
+    vt
+    We will advance you the money
+    主语： We
+    谓语 advance 
+    我将预付给你钱
+
+    
+    ???
+    adj  
+    no advance booking is necessary.
+    主语：  booking  
+    谓语： is(be动词第三人称单数)
+    不需要提前预定票
+
+
+    ???
+    A 10% deposit is payable in advance
+
+    主语： deposit 押金
+    谓语： is
+    payable in advance  做形容词
+    提前支付10%的押金
+
 ```
 
