正则表达式的特殊字符

--- a/重学cocos/正则表达式.md
+++ b/重学cocos/正则表达式.md
@@ -28,6 +28,10 @@
     \:
         1.当要匹配字符b   就不能写成  \b  ,当字符前面\的时候就不在匹配任何字符
         2. * ，？ 等正则里面是特殊字符我们要使用它当字符的时候  \*  \?表示
-        
+        3. RegExp 与字符串文字一起使用   
+            注意在字符串里面
+                \不会被显示 当我们在字符串里面写 \* 其实就是表示 * ,和直接写*意义是一样的而 在表示正则的特殊符号
+                当我们在RegExp 里面的字符串表示 *普通字符。就需要用 \\* 
+             
 
 ```
