--- a/重学cocos/正则表达式.md
+++ b/重学cocos/正则表达式.md
@@ -24,7 +24,7 @@
 
 
 ### 正则表达式的特殊字符
-```
+```js
     \:
         1.当要匹配字符b   就不能写成  \b  ,当字符前面\的时候就不在匹配任何字符
         2. * ，？ 等正则里面是特殊字符我们要使用它当字符的时候  \*  \?表示
@@ -32,6 +32,273 @@
             注意在字符串里面
                 \不会被显示 当我们在字符串里面写 \* 其实就是表示 * ,和直接写*意义是一样的而 在表示正则的特殊符号
                 当我们在RegExp 里面的字符串表示 *普通字符。就需要用 \\* 
-             
+
+    ^:
+        /^A/  取反  不匹配A字符
+
+
+
+$: 
+	匹配输入的结束
+
+    "这句话就是说匹配每句话结束为止和换行符钱的位置"
+
+    "aataa"  "aat"  /t$/  "aat" 中的t会被匹配
+    let reg=/t$/;
+    let str="aataaaaata";
+    let s= reg.test(str);
+    Global.Ins.log.debug("正则：",s);
+    结果：Log.Ts.debug() 正则： false
+
+
+    let reg=/t$/;
+    let str="aataaaaat";
+    let s= reg.test(str);
+    Global.Ins.log.debug("正则：",s);
+    结果：Log.Ts.debug() 正则： true
+
+*:
+    等价于{0,1}
+
+    /bo*/ 
+    asssqbdsdddboooooo
+        let reg=/bo*/g;
+        let str="asssqbdsdddboooooo";
+        let s= str.match(reg)
+        Global.Ins.log.debug("正则：",s);
+        10:11:44:927]Log.Ts.debug() 正则： b,boooooo
+
+        bo* 可匹配 b,也可以匹配bo  o count >=1
+        所以结果和我们推算也是相符合的
+    sdsdsdsdsbssss
+      匹配 b    
+    ssssssssaas
+    //没有任何匹配                    
++：
+    也就是{1,}
+        let reg=/bo+/g;
+        let str="asssqbdsdddboooooo";
+        let s= str.match(reg)
+        Global.Ins.log.debug("正则：",s);  
+        结果   Log.Ts.debug() 正则： boooooo
+
+        和 *的唯一区别就是 一个{0，} 一个 {1,}
+
+        bo......
+
+?
+    {0,1}    
+
+     let reg=/bo?/g;
+        let str="asssqdsdddbboooooobbbbsssb0";
+        let s= str.match(reg)
+        Global.Ins.log.debug("正则：",s);
+
+
+        结果： [10:20:21:391]Log.Ts.debug() 正则： b,bo,b,b,b,b,b
+
+        分析
+        ? 放在后面就代表的是 前面的字符可有可无
+
+        b  bo 都会被匹配  
+
+       其实他就是这样匹配的
+
+       先从第一个字符开始匹配 匹配到 bboo 的时候会
+       拿着正则字符去移动(当有多少个匹配的时候就移动匹配外的字符 其他情况一个一个字符去移动)
+       bb 只有第一个 b符合 
+       在移动一个字符
+       boo
+       bo符合
+       在移动二位位比较依次这样下去
+
+
+
+.:
+    匹配除了换行符之外的任何字符       
+
+        let reg=/.bo*/g;
+        let str="bbbbb";
+        let s= str.match(reg)
+        Global.Ins.log.debug("正则：",s);
+
+            输出  bb  bb
+        先来分析正则
+        /.bo*/
+        . 相当于 ^[\n] 除了换行符的任意字符
+        b b字符
+        o 可有 可没有不限个数
+
+        bbbb
+        先从b1 开始 b1 匹配 .
+            b2匹配 b
+            b3 不匹配 o,但是是* 可以没有
+            所以第一个配备  b1 b2
+
+        指针移动到b3 重复刚才的操作
+
+
+(x) :??
+
+
+   
+ x|y:
+    匹配x或y
+
+      
+{n}:
+    n代表出现的次数
+
+    /a{2}/ 匹配a出现2次
+
+{n,}：
+     至少出现n次
+
+
+{n,m}:
+    n到m次
+
+
+[xyz]:
+     字符集匹配方括号内任意字符
+     - 表示范围   
+     [a-z] 表示a到z的任意字符
+
+     特殊字符在字符集里面没有任何意义不用转义
+     [ab.*] ab.*四种字符的任意的一种
+
+
+[^xyz]  反向字符集
+    除了xyz 都可以匹配
+    用法形式和上面的字符集是一样的
+
+
+[\b] 
+    注意不是 \b
+    匹配一个退格(U+0008)
+
+
+
+...........................
+
+    还有一些不常用的请自行查阅
+
+
+
+
+
+
+
+
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+### js正则表达式的常用方法
+
+```
+var myRe = /d(b+)d/g;
+var myArray = myRe.exec("cdbbdbsbz");
+输出的对象
+[ "dbbd", "bb", index: 1, input: "cdbbdbsbz" ]
+
+        index:匹配到的第一个的字符串开始的索引
+        input:初始化的字符串
+        [0] 能匹配到的字符串
+另一种创建正则表达式的方式
+var myRe = new RegExp("d(b+)d", "g");
+var myArray = myRe.exec("cdbbdbsbz");
+
+
+
+
+
+正则对象
+    lastIndex: 开始下一个的匹配索引
+
+
+
+
+
+
+var myRe = /d(b+)d/g;
+var myArray = myRe.exec("cdbbdbsbz");
+console.log("The value of lastIndex is " + myRe.lastIndex);
+
+
+var myArray = /d(b+)d/g.exec("cdbbdbsbz");
+console.log("The value of lastIndex is " + /d(b+)d/g.lastIndex);
+
+
+
+
+一个是输出的是5 一个输出的是1这是为什么呢？？？？
+
+
+第一个是因为他创建了一个初始化对象生成器，并且把他赋值给了一个变量。他们后面使用的是同一个变量。
+
+
+
+```
+
+
+
+
+```js
+var re = /(\w+)\s(\w+)/;
+var str = "John Smith";
+var newstr = str.replace(re, "$2, $1");
+console.log(newstr);
+
+这个表达式输出 "Smith, John"。
+
+    \w 和 [a-zA-Z0-9_]相等
+    \s 匹配的是 匹配一个空白字符，包括空格、制表符、换页符和换行符。等价于[ \f\n\r\t\v\u00a0\u1680\u180e\u2000-\u200a\u2028\u2029\u202f\u205f\u3000\ufeff]。
+
+$1 是匹配是 John   $2匹配的Smith
+
+
+
+
+
+```
+
+
+
+
+
+### 通过标志进行高级搜索
+```js
+g  全局搜索。
+i 不区分大小写搜索。
+m 多行搜索。
+s  允许 . 匹配换行符。
+u   使用unicode码的模式进行匹配。
+y  执行“粘性(sticky)”搜索,匹配从目标字符串的当前位置开始。
+
+
+
+
+使用方式
+    var re = /pattern/flags;
+    var re = new RegExp("pattern", "flags");
+
+flags 就是我们要使用这些标志的地方
+
+
+
+
+
+
 
 ```
